--- a/src/components/Burger/Burger.module.css
+++ b/src/components/Burger/Burger.module.css
@@ -4,6 +4,8 @@
     height: 250px;
     overflow: scroll;
     text-align: center;
+    font-weight: bold;
+    font-size: 1.2rem;
 }
 
 @media (min-width: 500px) and (min-height: 400px) {
