--- a/src/components/Burger/BurgerIngredient/BurgerIngredient.module.scss
+++ b/src/components/Burger/BurgerIngredient/BurgerIngredient.module.scss
@@ -1,3 +1,5 @@
+@import './_helper.scss';
+
 .BreadBottom {
   height: 13%;
   width: 80%;
@@ -30,11 +32,7 @@
 }
 
 .Seeds1:after {
-  content: "";
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  background-color: white;
+  @include seedsHelper();
   left: -170%;
   top: -260%;
   border-radius: 40%;
@@ -43,11 +41,7 @@
 }
   
 .Seeds1:before {
-  content: "";
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  background-color: white;
+  @include seedsHelper();
   left: 180%;
   top: -50%;
   border-radius: 40%;
@@ -68,11 +62,7 @@
 }
   
 .Seeds2:before {
-  content: "";
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  background-color: white;
+  @include seedsHelper();
   left: 150%;
   top: -130%;
   border-radius: 40%;
